--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -39,7 +39,7 @@
     <ClInclude Include="engine\timer.h" />
     <ClInclude Include="engine\transform.h" />
     <ClInclude Include="engine\window.h" />
-    <ClInclude Include="objecta\objecta.h" />
+    <ClInclude Include="planet\planet.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="builder\builder.cpp" />
@@ -58,7 +58,7 @@
     <ClCompile Include="engine\timer.cpp" />
     <ClCompile Include="engine\transform.cpp" />
     <ClCompile Include="engine\window.cpp" />
-    <ClCompile Include="objecta\objecta.cpp" />
+    <ClCompile Include="planet\planet.cpp" />
     <ClCompile Include="ProtoGame.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
