--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -39,7 +39,9 @@
     <ClInclude Include="engine\timer.h" />
     <ClInclude Include="engine\transform.h" />
     <ClInclude Include="engine\window.h" />
+    <ClInclude Include="moon\moon.h" />
     <ClInclude Include="planet\planet.h" />
+    <ClInclude Include="spacecraft\spacecraft.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="builder\builder.cpp" />
@@ -58,8 +60,10 @@
     <ClCompile Include="engine\timer.cpp" />
     <ClCompile Include="engine\transform.cpp" />
     <ClCompile Include="engine\window.cpp" />
+    <ClCompile Include="moon\moon.cpp" />
     <ClCompile Include="planet\planet.cpp" />
     <ClCompile Include="ProtoGame.cpp" />
+    <ClCompile Include="spacecraft\spacecraft.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{79258F7C-6F0F-43A0-8590-8392AAB3852E}</ProjectGuid>
