--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="engine\transform.h" />
     <ClInclude Include="engine\window.h" />
     <ClInclude Include="moon\moon.h" />
+    <ClInclude Include="orbit\orbit.h" />
     <ClInclude Include="planet\planet.h" />
     <ClInclude Include="spacecraft\spacecraft.h" />
   </ItemGroup>
@@ -61,6 +62,7 @@
     <ClCompile Include="engine\transform.cpp" />
     <ClCompile Include="engine\window.cpp" />
     <ClCompile Include="moon\moon.cpp" />
+    <ClCompile Include="orbit\orbit.cpp" />
     <ClCompile Include="planet\planet.cpp" />
     <ClCompile Include="ProtoGame.cpp" />
     <ClCompile Include="spacecraft\spacecraft.cpp" />
