--- a/ProtoEngine.vcxproj.filters
+++ b/ProtoEngine.vcxproj.filters
@@ -30,6 +30,12 @@
     <None Include="engine\shaders\vshader.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="engine\shaders\fshader_skybox.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="engine\shaders\vshader_skybox.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\camera.h">
@@ -88,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="spacecraft\spacecraft.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\texture_cubemap.h">
+      <Filter>Header Files\Engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -150,6 +159,9 @@
     </ClCompile>
     <ClCompile Include="spacecraft\spacecraft.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\texture_cubemap.cpp">
+      <Filter>Source Files\Engine</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
