Saving old game, "ProtoEngine.cpp". Starting new game, "QuatDemo.cpp". Will need: glm::quaternion or my own + imgui + arrows. Going to add object.load/unload.

--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -68,7 +68,7 @@
     <ClCompile Include="moon\moon.cpp" />
     <ClCompile Include="orbit\orbit.cpp" />
     <ClCompile Include="planet\planet.cpp" />
-    <ClCompile Include="ProtoGame.cpp" />
+    <ClCompile Include="QuatDemo.cpp" />
     <ClCompile Include="spacecraft\spacecraft.cpp" />
     <ClCompile Include="src\imgui\imgui.cpp" />
     <ClCompile Include="src\imgui\imgui_demo.cpp" />
