--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -25,6 +25,7 @@
     <None Include="engine\shaders\vshader_skybox.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Arrow.h" />
     <ClInclude Include="builder\builder.h" />
     <ClInclude Include="engine\camera.h" />
     <ClInclude Include="engine\engine.h" />
@@ -42,12 +43,14 @@
     <ClInclude Include="engine\timer.h" />
     <ClInclude Include="engine\transform.h" />
     <ClInclude Include="engine\window.h" />
+    <ClInclude Include="Globe.h" />
     <ClInclude Include="moon\moon.h" />
     <ClInclude Include="orbit\orbit.h" />
     <ClInclude Include="planet\planet.h" />
     <ClInclude Include="spacecraft\spacecraft.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Arrow.cpp" />
     <ClCompile Include="builder\builder.cpp" />
     <ClCompile Include="engine\camera.cpp" />
     <ClCompile Include="engine\engine.cpp" />
@@ -65,6 +68,7 @@
     <ClCompile Include="engine\timer.cpp" />
     <ClCompile Include="engine\transform.cpp" />
     <ClCompile Include="engine\window.cpp" />
+    <ClCompile Include="Globe.cpp" />
     <ClCompile Include="moon\moon.cpp" />
     <ClCompile Include="orbit\orbit.cpp" />
     <ClCompile Include="planet\planet.cpp" />
