--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -44,6 +44,7 @@
     <ClInclude Include="engine\transform.h" />
     <ClInclude Include="engine\window.h" />
     <ClInclude Include="Globe.h" />
+    <ClInclude Include="lerparrow.h" />
     <ClInclude Include="moon\moon.h" />
     <ClInclude Include="orbit\orbit.h" />
     <ClInclude Include="planet\planet.h" />
@@ -69,6 +70,7 @@
     <ClCompile Include="engine\transform.cpp" />
     <ClCompile Include="engine\window.cpp" />
     <ClCompile Include="Globe.cpp" />
+    <ClCompile Include="lerparrow.cpp" />
     <ClCompile Include="moon\moon.cpp" />
     <ClCompile Include="orbit\orbit.cpp" />
     <ClCompile Include="planet\planet.cpp" />
