--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="arrows\lerparrow.h" />
     <ClInclude Include="arrows\slerparrow.h" />
     <ClInclude Include="builder\builder.h" />
+    <ClInclude Include="engine\asset.h" />
     <ClInclude Include="engine\camera.h" />
     <ClInclude Include="engine\engine.h" />
     <ClInclude Include="engine\fileio.h" />
@@ -56,6 +57,7 @@
     <ClCompile Include="arrows\lerparrow.cpp" />
     <ClCompile Include="arrows\slerparrow.cpp" />
     <ClCompile Include="builder\builder.cpp" />
+    <ClCompile Include="engine\asset.cpp" />
     <ClCompile Include="engine\camera.cpp" />
     <ClCompile Include="engine\engine.cpp" />
     <ClCompile Include="engine\fileio.cpp" />
