--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -25,10 +25,6 @@
     <None Include="engine\shaders\vshader_skybox.glsl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="arrows\Arrow.h" />
-    <ClInclude Include="arrows\lerparrow.h" />
-    <ClInclude Include="arrows\slerparrow.h" />
-    <ClInclude Include="builder\builder.h" />
     <ClInclude Include="engine\asset.h" />
     <ClInclude Include="engine\camera.h" />
     <ClInclude Include="engine\engine.h" />
@@ -42,17 +38,17 @@
     <ClInclude Include="engine\timer.h" />
     <ClInclude Include="engine\transform.h" />
     <ClInclude Include="engine\window.h" />
-    <ClInclude Include="globe\Globe.h" />
-    <ClInclude Include="moon\moon.h" />
-    <ClInclude Include="orbit\orbit.h" />
-    <ClInclude Include="planet\planet.h" />
-    <ClInclude Include="spacecraft\spacecraft.h" />
+    <ClInclude Include="objects\arrows\Arrow.h" />
+    <ClInclude Include="objects\arrows\lerparrow.h" />
+    <ClInclude Include="objects\arrows\slerparrow.h" />
+    <ClInclude Include="objects\builder\builder.h" />
+    <ClInclude Include="objects\globe\Globe.h" />
+    <ClInclude Include="objects\moon\moon.h" />
+    <ClInclude Include="objects\orbit\orbit.h" />
+    <ClInclude Include="objects\planet\planet.h" />
+    <ClInclude Include="objects\spacecraft\spacecraft.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="arrows\Arrow.cpp" />
-    <ClCompile Include="arrows\lerparrow.cpp" />
-    <ClCompile Include="arrows\slerparrow.cpp" />
-    <ClCompile Include="builder\builder.cpp" />
     <ClCompile Include="engine\asset.cpp" />
     <ClCompile Include="engine\camera.cpp" />
     <ClCompile Include="engine\engine.cpp" />
@@ -66,12 +62,16 @@
     <ClCompile Include="engine\timer.cpp" />
     <ClCompile Include="engine\transform.cpp" />
     <ClCompile Include="engine\window.cpp" />
-    <ClCompile Include="globe\Globe.cpp" />
-    <ClCompile Include="moon\moon.cpp" />
-    <ClCompile Include="orbit\orbit.cpp" />
-    <ClCompile Include="planet\planet.cpp" />
+    <ClCompile Include="objects\arrows\Arrow.cpp" />
+    <ClCompile Include="objects\arrows\lerparrow.cpp" />
+    <ClCompile Include="objects\arrows\slerparrow.cpp" />
+    <ClCompile Include="objects\builder\builder.cpp" />
+    <ClCompile Include="objects\globe\Globe.cpp" />
+    <ClCompile Include="objects\moon\moon.cpp" />
+    <ClCompile Include="objects\orbit\orbit.cpp" />
+    <ClCompile Include="objects\planet\planet.cpp" />
+    <ClCompile Include="objects\spacecraft\spacecraft.cpp" />
     <ClCompile Include="SatelliteScene.cpp" />
-    <ClCompile Include="spacecraft\spacecraft.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{79258F7C-6F0F-43A0-8590-8392AAB3852E}</ProjectGuid>
