--- a/ProtoEngine.vcxproj.filters
+++ b/ProtoEngine.vcxproj.filters
@@ -202,7 +202,7 @@
     <ClCompile Include="playerbullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SceneRollABall.cpp">
+    <ClCompile Include="SceneSpaceShooter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
